[gd_scene load_steps=17 format=3 uid="uid://dafasd7q4vktd"]

[ext_resource type="ArrayMesh" uid="uid://cbpqxxd14g8un" path="res://assets/truck_town/vehicles/meshes/tow_truck.res" id="1_l2tq4"]
[ext_resource type="Script" uid="uid://dssspbmga6hht" path="res://scenes/wild_truck/WildTruckHead.gd" id="2_kv7j2"]
[ext_resource type="ArrayMesh" uid="uid://bqrwin8ccgptt" path="res://assets/truck_town/vehicles/meshes/wheel.res" id="2_o5qt4"]
[ext_resource type="AudioStream" uid="uid://cb7wvsd6vygd3" path="res://assets/truck_town/vehicles/engine.wav" id="3_cgyy4"]
[ext_resource type="AudioStream" uid="uid://sy2li7u35867" path="res://assets/truck_town/vehicles/impact_1.wav" id="4_tnr6q"]
[ext_resource type="AudioStream" uid="uid://bf0h7s81yr8nj" path="res://assets/truck_town/vehicles/impact_2.wav" id="5_8v1vh"]
[ext_resource type="AudioStream" uid="uid://sun2n8a4xapl" path="res://assets/truck_town/vehicles/impact_3.wav" id="6_gfhss"]
[ext_resource type="AudioStream" uid="uid://dpbayeeufya21" path="res://assets/truck_town/vehicles/impact_4.wav" id="7_5ch16"]
[ext_resource type="Texture2D" uid="uid://d4ostmqwgytk" path="res://assets/truck_town/vehicles/particle_smoke.png" id="8_pnn1h"]
[ext_resource type="Texture2D" uid="uid://bju75l2w3r7vq" path="res://assets/truck_town/vehicles/blob_shadow.png" id="9_8wjpp"]

[sub_resource type="BoxShape3D" id="BoxShape3D_rlxdh"]
size = Vector3(1.17624, 0.6963, 2.23996)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_k43wt"]
random_pitch = 1.05
random_volume_offset_db = 2.0
streams_count = 4
stream_0/stream = ExtResource("4_tnr6q")
stream_1/stream = ExtResource("5_8v1vh")
stream_2/stream = ExtResource("6_gfhss")
stream_3/stream = ExtResource("7_5ch16")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_atib4"]
transparency = 1
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_color = Color(0.462745, 0.462745, 0.462745, 0.501961)
albedo_texture = ExtResource("8_pnn1h")
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
proximity_fade_enabled = true
proximity_fade_distance = 0.5

[sub_resource type="QuadMesh" id="QuadMesh_51cgt"]
material = SubResource("StandardMaterial3D_atib4")

[sub_resource type="Curve" id="Curve_r03v1"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_v2twn"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[node name="WildTruck" type="StaticBody3D"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)
collision_layer = 2
script = ExtResource("2_kv7j2")
max_speed = 10.0

[node name="Body" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00169557, 0.222867, -0.0955184)
layers = 2
gi_mode = 2
mesh = ExtResource("1_l2tq4")

[node name="Wheel1" type="MeshInstance3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.573678, 0.000773743, 1.10416)
layers = 2
gi_mode = 2
mesh = ExtResource("2_o5qt4")

[node name="Wheel2" type="MeshInstance3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.573678, 0.000773743, -0.783403)
layers = 2
gi_mode = 2
mesh = ExtResource("2_o5qt4")

[node name="Wheel3" type="MeshInstance3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.573678, 0.000773743, 1.10416)
layers = 2
gi_mode = 2
mesh = ExtResource("2_o5qt4")

[node name="Wheel4" type="MeshInstance3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.573678, 0.000773743, -0.783403)
layers = 2
gi_mode = 2
mesh = ExtResource("2_o5qt4")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00169557, 0.614232, 0.0625506)
shape = SubResource("BoxShape3D_rlxdh")

[node name="CollisionDetector" type="Area3D" parent="."]
collision_layer = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="CollisionDetector"]
transform = Transform3D(1.075, 0, 0, 0, 1.075, 0, 0, 0, 1.075, -0.00169557, 0.614232, 0.0625506)
shape = SubResource("BoxShape3D_rlxdh")

[node name="EngineSound" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00169557, 0.222867, -0.0955184)
stream = ExtResource("3_cgyy4")
pitch_scale = 0.05
autoplay = true
max_distance = 26.43
attenuation_filter_cutoff_hz = 20500.0

[node name="ImpactSound" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00169557, 0.614232, 0.0625506)
stream = SubResource("AudioStreamRandomizer_k43wt")
volume_db = -10.0
max_polyphony = 3
attenuation_filter_cutoff_hz = 20500.0

[node name="CPUParticles3D" type="CPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2, 0.2, -1.2)
amount = 125
lifetime = 1.25
mesh = SubResource("QuadMesh_51cgt")
direction = Vector3(0, 1, -0.5)
gravity = Vector3(0, 0, 0)
initial_velocity_min = 1.0
initial_velocity_max = 1.0
damping_min = 0.05
damping_max = 0.05
angle_max = 360.0
scale_amount_curve = SubResource("Curve_r03v1")
color_ramp = SubResource("Gradient_v2twn")

[node name="BlobShadow" type="Decal" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.0499996)
size = Vector3(1.6, 4, 3)
texture_albedo = ExtResource("9_8wjpp")
upper_fade = 2.0
lower_fade = 1.0
cull_mask = 1048573

[node name="AudioListener3D" type="AudioListener3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00169557, 0.222867, -0.0955184)
current = true
